--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -20,7 +20,7 @@
                 <ol>
                     <li aria-current="page" class="active"><span class="step-number">1</span> <span class="step">Select a date</span></li>
                     <li><span class="step-number">2</span> <span class="step">Enter your details</span></li>
-                    <li><span class="step-number">3</span> <span class="step">Reservation confirmation</span></li>
+                    <li><span class="step-number">3</span> <span class="step">Your visit details</span></li>
                     <li><span class="step-number">4</span> <span class="step">Order documents</span></li>
                     <li><span class="step-number">5</span> <span class="step">Order summary</span></li>
                 </ol>
