--- a/book-a-reading-room-visit.web/Views/Booking/ReturnToBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/ReturnToBooking.cshtml
@@ -21,7 +21,7 @@
                             <p>Check the highlighted responses below.</p>
                         </div>
                     }
-                    <p>Enter your booking details below to find the document order for an upcoming visit to the reading rooms.</p>
+                    <p>Enter your booking details below to find a document order for your upcoming visit to the reading rooms.</p>
 
                     <p>
                         You will need to complete your document order at least <span class="bold-text">5 working days before your date of visit</span>. 
@@ -95,7 +95,7 @@
                             </div>
                         </fieldset>
 
-                        <button type="submit" class="button">Return to your document order</button>
+                        <button type="submit" class="button">Go to your document order</button>
                     </form>
                 </div>
             </div>
