Update thank you page copy

--- a/book-a-reading-room-visit.web/Views/Booking/ThankYou.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/ThankYou.cshtml
@@ -8,7 +8,7 @@
 
 @await Html.PartialAsync("Partials/_Breadcrumbs")
 
-<h1 class="display-4">Thank you</h1>
+<h1 class="display-4">You have chosen to continue your document order later</h1>
 
 <div class="container content-wrapper">
 
@@ -16,20 +16,20 @@
         <div class="row">
             <div class="col-md-12">
                 <p>
-                    Your booking is provisional. Complete your document order form at any point before the deadline
+                    Your booking is provisional. Complete the document order form at any point before the deadline
                     otherwise your visit will be cancelled.
                 </p>
 
                 <ul>
                     <li>
-                        <a href="https://discovery.nationalarchives.gov.uk">Go to Discovery - our catalogue to find your document references</a>
+                        Go to <a href="https://discovery.nationalarchives.gov.uk/">Discovery, our catalogue</a> to find your document references
                     </li>
                     <li>
-                        <a href="https://www.nationalarchives.gov.uk/help-with-your-research/">See our research guides on how to get started in Discovery - our catalogue</a>
+                        See our <a href="https://www.nationalarchives.gov.uk/help-with-your-research/">research guides</a> on how to get started in Discovery, our catalogue
                     </li>
                 </ul>
 
-                <p class="bold-text">Make sure you close your browser if you’re using a shared device.</p>
+                <p>Close your browser if you are using a shared device.</p>
             </div>
         </div>
     </div>
