--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -27,7 +27,7 @@ a.button {
     min-height: 600px;
     background-color: #fff;
     margin-top: 0em;
-    padding: 0em 0 5em 0;
+    padding: 0em 0 6em 0;
 
     .heading {
         margin-top: 1.5em;
@@ -169,7 +169,7 @@ form {
 }
 
 .document-list {
-    margin: 2em 0 4em 0;
+    margin: 2em 0 1em 0;
     padding-left: 1em;
 
     li {
@@ -906,8 +906,7 @@ details {
         margin-bottom: 2em;
 
         legend {
-            font-size: 1.25em !important;
-            margin-bottom: 1.2em;
+            font-size: 1.3em !important;
         }
     }
 }
@@ -1016,4 +1015,13 @@ body {
     p {
         margin: 2em 0 0.3em !important;
     }
+}
+
+.secondary-button {
+    background: #fff !important;
+    color: #134571 !important;
+    text-decoration: underline !important;
+    padding: 0 !important;
+    font-size: 1em !important;
+    margin-top: 0 !important;
 }
