Run grunt and add print-your-order.js to layout.cshtml

--- a/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
@@ -57,6 +57,7 @@
     <script src="~/js/cookie-banner.js"></script>
     <script src="~/js/hide-room-info.js"></script>
     <script src="~/js/dist/toggle-reading-room.js"></script>
+    <script src="~/js/dist/print-your-order.js"></script>
     <script src="~/js/book-a-reading-room-visit-0.0.1.js"></script>
 </body>
 </html>
