--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_Breadcrumbs.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_Breadcrumbs.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="tna-breadcrumb">
     <ul>
         <li><a href="/">Home</a> &gt;</li>
-        @if (ViewData["Title"].ToString() == "Home Page")
+        @if (ViewData["Title"].ToString() == "Book a visit to view our documents - The National Archives")
         {
             <li>Book a visit to view our documents</li>
         }
