--- a/book-a-reading-room-visit.web/Views/Booking/ThankYou.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/ThankYou.cshtml
@@ -22,10 +22,10 @@
 
                 <ul>
                     <li>
-                        Go to <a href="https://discovery.nationalarchives.gov.uk/">Discovery, our catalogue</a> to find your document references
+                        Go to <a href="https://discovery.nationalarchives.gov.uk/">Discovery, our catalogue</a> to find your document references.
                     </li>
                     <li>
-                        See our <a href="https://www.nationalarchives.gov.uk/help-with-your-research/">research guides</a> on how to get started in Discovery, our catalogue
+                        See our <a href="https://www.nationalarchives.gov.uk/help-with-your-research/">research guides</a> on how to get started in Discovery, our catalogue.
                     </li>
                 </ul>
 
