--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_NotificationBanner.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_NotificationBanner.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="notification-banner">
+﻿<div class="notification-banner no-print">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
